--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-       /* create an extra attribute(id)*/
+       /* create an extra attribute(id) to match with the href*/
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
