--- a/Develop/index.html
+++ b/Develop/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="benefits">
-      <div class="benefit-lead">
+      <div>
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
         <p>
@@ -79,7 +79,7 @@
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-brand">
+      <div>
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
         <p>
@@ -87,7 +87,7 @@
           the search ranking and visibility for your business.
         </p>
       </div>
-      <div class="benefit-cost">
+      <div>
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" />
         <p>
