--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,7 @@
       <div id="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
+          alt="notebook with seo text"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
@@ -45,6 +46,7 @@
       >
         <img
           src="./assets/images/online-reputation-management.jpg"
+          alt="laptop with a word; reputation "
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -59,6 +61,7 @@
       <div id="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
+          alt="people on a table with social media name on"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -73,7 +76,8 @@
     <div class="benefits">
       <div>
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png" 
+          alt="cogwheel icon"/>
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -81,7 +85,9 @@
       </div>
       <div>
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png" 
+            alt="lightbulb icon"
+        />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -89,7 +95,9 @@
       </div>
       <div>
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png"
+            alt="money icon"
+        />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
