--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -7,32 +7,20 @@
   </head>
 
   <body>
-    <div class="header">
-      <h1>Hori<span id="seo">seo</span>n</h1>
-      <div>
+    <header>
+      <h1><strong>Hori<em>seo</em>n</strong></h1>
+      <nav>
         <ul>
-          <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
-          </li>
-          <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
-          </li>
-          <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
-          </li>
+          <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+          <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+          <li><a href="#social-media-marketing">Social Media Marketing</a></li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </header>
     <div class="hero"></div>
-    <div class="content">
-      <div id="search-engine-optimization">
-        <img
-          src="./assets/images/search-engine-optimization.jpg"
-          alt="notebook with seo text"
-          class="float-left"
-        />
+    <main>
+      <section id="search-engine-optimization">
+        <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with SEO text" class="float-left" />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -40,15 +28,9 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
-        id="online-reputation-management"
-      >
-        <img
-          src="./assets/images/online-reputation-management.jpg"
-          alt="laptop with a word; reputation "
-          class="float-right"
-        />
+      </section>
+      <section id="online-reputation-management">
+        <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with the word 'Reputation'" class="float-right" />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -57,13 +39,9 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing">
-        <img
-          src="./assets/images/social-media-marketing.jpg"
-          alt="people on a table with social media name on"
-          class="float-left"
-        />
+      </section>
+      <section id="social-media-marketing">
+        <img src="./assets/images/social-media-marketing.jpg" alt="People on a table with the 'Social Media' name" class="float-left" />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -71,42 +49,37 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
-    </div>
-    <div class="benefits">
-      <div>
+      </section>
+    </main>
+    <aside class="benefits">
+      <article>
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" 
-          alt="cogwheel icon"/>
+        <img src="./assets/images/lead-generation.png" alt="Cogwheel icon" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div>
+      </article>
+      <article>
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" 
-            alt="lightbulb icon"
-        />
+        <img src="./assets/images/brand-awareness.png" alt="Lightbulb icon" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div>
+      </article>
+      <article>
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png"
-            alt="money icon"
-        />
+        <img src="./assets/images/cost-management.png" alt="Money icon" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
-    </div>
-    <div class="footer">
+      </article>
+    </aside>
+    <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
