--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -8,19 +8,31 @@
 
   <body>
     <header>
-      <h1><strong>Hori<em>seo</em>n</strong></h1>
+      <h1>Hori<strong id="seo">seo</strong>n</h1>
       <nav>
         <ul>
-          <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-          <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-          <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+          <li>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+          </li>
+          <li>
+            <a href="#online-reputation-management"
+              >Online Reputation Management</a
+            >
+          </li>
+          <li>
+            <a href="#social-media-marketing">Social Media Marketing</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <div class="hero"></div>
+    <figure class="hero"></figure>
     <main>
       <section id="search-engine-optimization">
-        <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with SEO text" class="float-left" />
+        <img
+          src="./assets/images/search-engine-optimization.jpg"
+          alt="notebook with seo text"
+          class="float-left"
+        />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -30,7 +42,11 @@
         </p>
       </section>
       <section id="online-reputation-management">
-        <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with the word 'Reputation'" class="float-right" />
+        <img
+          src="./assets/images/online-reputation-management.jpg"
+          alt="laptop with a word; reputation "
+          class="float-right"
+        />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -41,7 +57,11 @@
         </p>
       </section>
       <section id="social-media-marketing">
-        <img src="./assets/images/social-media-marketing.jpg" alt="People on a table with the 'Social Media' name" class="float-left" />
+        <img
+          src="./assets/images/social-media-marketing.jpg"
+          alt="people on a table with social media name on"
+          class="float-left"
+        />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -52,30 +72,30 @@
       </section>
     </main>
     <aside class="benefits">
-      <article>
+      <section>
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" alt="Cogwheel icon" />
+        <img src="./assets/images/lead-generation.png" alt="cogwheel icon" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </article>
-      <article>
+      </section>
+      <section>
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" alt="Lightbulb icon" />
+        <img src="./assets/images/brand-awareness.png" alt="lightbulb icon" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </article>
-      <article>
+      </section>
+      <section>
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" alt="Money icon" />
+        <img src="./assets/images/cost-management.png" alt="money icon" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </article>
+      </section>
     </aside>
     <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
